--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -4,7 +4,7 @@
  [{"git":
    {"url": "https://github.com/JamesGallicchio/http",
     "subDir?": null,
-    "rev": "53354e8f13bf1d5ec63af7148dcdb3182f6a7ad8",
+    "rev": "abbc6ccf3f8e868a1ccc14a2fcdf38f93e147c7c",
     "opts": {},
     "name": "Http",
     "inputRev?": "main",
@@ -20,11 +20,11 @@
   {"git":
    {"url": "https://github.com/gebner/quote4",
     "subDir?": null,
-    "rev": "e75daed95ad1c92af4e577fea95e234d7a8401c1",
+    "rev": "a387c0eb611857e2460cf97a8e861c944286e6b2",
     "opts": {},
     "name": "Qq",
     "inputRev?": "master",
-    "inherited": true}},
+    "inherited": false}},
   {"git":
    {"url": "https://github.com/fgdorais/lean4-unicode-basic",
     "subDir?": null,
@@ -44,7 +44,7 @@
   {"git":
    {"url": "https://github.com/leanprover/std4",
     "subDir?": null,
-    "rev": "67855403d60daf181775fa1ec63b04e70bcc3921",
+    "rev": "f2df4ab8c0726fce3bafb73a5727336b0c3120ea",
     "opts": {},
     "name": "std",
     "inputRev?": "main",
