--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -1,51 +1,50 @@
-{"version": 5,
- "packagesDir": "lake-packages",
+{"version": 7,
+ "packagesDir": ".lake/packages",
  "packages":
- [{"git":
-   {"url": "https://github.com/JamesGallicchio/http",
-    "subDir?": null,
-    "rev": "94f6772d9f9656b11ae62f548780b004ed9f6db1",
-    "opts": {},
-    "name": "Http",
-    "inputRev?": "main",
-    "inherited": false}},
-  {"git":
-   {"url": "https://github.com/fgdorais/lean4-parser",
-    "subDir?": null,
-    "rev": "2d59ec7dcd5e36ed2e2fc8ea9dd06abe957cdb76",
-    "opts": {},
-    "name": "Parser",
-    "inputRev?": "main",
-    "inherited": true}},
-  {"git":
-   {"url": "https://github.com/gebner/quote4",
-    "subDir?": null,
-    "rev": "e75daed95ad1c92af4e577fea95e234d7a8401c1",
-    "opts": {},
-    "name": "Qq",
-    "inputRev?": "master",
-    "inherited": true}},
-  {"git":
-   {"url": "https://github.com/fgdorais/lean4-unicode-basic",
-    "subDir?": null,
-    "rev": "2491e781ae478b6e6f1d86a7157f1c58fc50f895",
-    "opts": {},
-    "name": "UnicodeBasic",
-    "inputRev?": "main",
-    "inherited": true}},
-  {"git":
-   {"url": "https://github.com/leanprover/std4",
-    "subDir?": null,
-    "rev": "54da53d93077d8bd1e3f0a9d318d50387fed1fd6",
-    "opts": {},
-    "name": "Std",
-    "inputRev?": "main",
-    "inherited": true}},
-  {"git":
-   {"url": "https://github.com/leanprover/std4",
-    "subDir?": null,
-    "rev": "68517fcd34adbd7b0953a1de3b73080e57e60ba4",
-    "opts": {},
-    "name": "std",
-    "inputRev?": "main",
-    "inherited": false}}]}
+ [{"url": "https://github.com/leanprover/std4",
+   "type": "git",
+   "subDir": null,
+   "rev": "b1ebd72c5d262ea10a33ea582525925df874ad1e",
+   "name": "std",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": false,
+   "configFile": "lakefile.lean"},
+  {"url": "https://github.com/gebner/quote4",
+   "type": "git",
+   "subDir": null,
+   "rev": "1c88406514a636d241903e2e288d21dc6d861e01",
+   "name": "Qq",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "master",
+   "inherited": true,
+   "configFile": "lakefile.lean"},
+  {"url": "https://github.com/fgdorais/lean4-unicode-basic",
+   "type": "git",
+   "subDir": null,
+   "rev": "8603bb1d0d5edae780e3a85a0398fd83dbbb80a3",
+   "name": "UnicodeBasic",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": true,
+   "configFile": "lakefile.lean"},
+  {"url": "https://github.com/fgdorais/lean4-parser",
+   "type": "git",
+   "subDir": null,
+   "rev": "e13af0e4538b2dbcb9f3b35e73126c36019a06bd",
+   "name": "Parser",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": true,
+   "configFile": "lakefile.lean"},
+  {"url": "https://github.com/JamesGallicchio/http",
+   "type": "git",
+   "subDir": null,
+   "rev": "6f0ad6723d3b1cc1ee9903d4a877f9be480dfab3",
+   "name": "Http",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": false,
+   "configFile": "lakefile.lean"}],
+ "name": "«lean-openapi»",
+ "lakeDir": ".lake"}
